syntax = "proto3";

package pb;

import "user.proto";

option go_package = "blog_api/pb";

message UpdateUserRequest {
    optional string first_name = 1;
    optional string last_name = 2;
    optional string email = 3;
    optional string phone = 4;
    optional string description = 5;
    int64 user_id = 6;
}

message UpdateUserResponse {
    User user = 1;
}
